Mirror_Example/VirtualService.yaml
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: helloworld
spec:
  hosts:
    - "*" # Copy the value in the Gateway hosts
  gateways:
    - helloworld-gw # Gateway Name
  http:
    - mirror: # Mirroring sends a copy of live traffic to a mirrored service.
        host: helloworld # The Service DNS name
        subset: version-v2 # The name defined in the DestinationRule
      route:
        - destination:
            host: helloworld # The Service DNS name
            subset: version-v1 # The name defined in the DestinationRule
